syntax = "proto3";
option go_package = "Replication/grpc/proto";

message bid{
  int64 message_bid = 1;
  int64 logical_time = 2;
  string client_id = 3;
}

message result{
  int64 message_result = 1;
  string client_id = 2;
  int64 logical_time = 3;
}

message heartbeat {
  bool succes = 1;
  int64 logical_time = 2;
}

message ack {
  bool success = 1;
  string error = 2;
  int64 logical_time = 3;
}

message currentBid {
  int64 money = 1;
  int64 logical_time = 2;
  string message = 3;
}

message empty {

}

service Replication {

  rpc Bid(bid) returns (ack);

  rpc Result(result) returns (currentBid);

  rpc Heartbeat(heartbeat) returns (empty);
}
